Fixed an error in one of the links and fixed some spacing issues

--- a/output.css
+++ b/output.css
@@ -773,6 +773,10 @@ video {
   display: none;
 }
 
+.h-40 {
+  height: 10rem;
+}
+
 .h-\[100vh\] {
   height: 100vh;
 }
@@ -790,16 +794,8 @@ video {
   height: 100%;
 }
 
-.h-40 {
-  height: 10rem;
-}
-
 .min-h-\[100vh\] {
   min-height: 100vh;
-}
-
-.min-h-\[80dvh\] {
-  min-height: 80dvh;
 }
 
 .w-1 {
@@ -855,16 +851,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.cursor-pointer {
-  cursor: pointer;
-}
-
 .cursor-grab {
   cursor: grab;
 }
 
 .cursor-grabbing {
   cursor: grabbing;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .select-none {
@@ -941,6 +937,10 @@ video {
   gap: 0px;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .gap-10 {
   gap: 2.5rem;
 }
@@ -955,6 +955,10 @@ video {
 
 .gap-16 {
   gap: 4rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-20 {
@@ -991,14 +995,6 @@ video {
 
 .gap-9 {
   gap: 2.25rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
 }
 
 .gap-x-20 {
@@ -1172,6 +1168,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1227,6 +1227,11 @@ video {
   padding-bottom: 3.5rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -1242,9 +1247,14 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .text-center {
@@ -1286,6 +1296,11 @@ video {
   font-size: 150px;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1304,11 +1319,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -1335,8 +1345,8 @@ video {
   line-height: 2rem;
 }
 
-.leading-\[90px\] {
-  line-height: 90px;
+.leading-\[100px\] {
+  line-height: 100px;
 }
 
 .leading-loose {
@@ -1359,14 +1369,6 @@ video {
   line-height: 1.25;
 }
 
-.leading-\[80px\] {
-  line-height: 80px;
-}
-
-.leading-\[100px\] {
-  line-height: 100px;
-}
-
 .tracking-tight {
   letter-spacing: -0.025em;
 }
@@ -1387,6 +1389,11 @@ video {
   letter-spacing: 0.1em;
 }
 
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .text-light {
   --tw-text-opacity: 1;
   color: rgb(234 234 234 / var(--tw-text-opacity));
@@ -1402,19 +1409,14 @@ video {
   color: rgb(6 51 63 / var(--tw-text-opacity));
 }
 
-.text-blue-400 {
+.text-slate-300 {
   --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
+  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
 .text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
-.text-slate-300 {
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
 .text-slate-500 {
@@ -1500,20 +1502,16 @@ video {
     width: 6rem;
   }
 
-  .md\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:flex-row {
-    flex-direction: row;
+  .md\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
-  .md\:flex-col {
-    flex-direction: column;
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:gap-10 {
@@ -1543,18 +1541,6 @@ video {
 
   .md\:leading-\[190px\] {
     line-height: 190px;
-  }
-
-  .md\:leading-\[180px\] {
-    line-height: 180px;
-  }
-
-  .md\:leading-\[200px\] {
-    line-height: 200px;
-  }
-
-  .md\:leading-\[150px\] {
-    line-height: 150px;
   }
 }
 
